refactor : 접근 제한자 수정 (public -> private)